tests/ok/enum-tagged-union.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn choose(flag: bool) -> OptionI32 {
  if flag {
    return Some(42);
  }
  return None;
}

fn main() -> i64 {
  let expected = Some(42);
  if choose(true) == expected {
    if choose(false) != expected {
      return 7;
    }
  }
  return 1;
}
