tests/errors/generic-enum-null-coalescing-type.ari
enum Option[T] {
  None,
  Some(T),
}

fn main() -> i64 {
  let value = Some<i64>(1);
  return value ?? true;
}
